# motion-detection

./: CMakeLists.txt
include/motion_detection/: controller.h  detector.h  motion_detection.h  reader.h  recorder.h  shared_data.h
resources/: config.txt
src/: controller.cpp  detector.cpp  reader.cpp  recorder.cpp  shared_data.cpp
src/app/: main.cpp
